<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.usc.zsurani.grubmate.activity_and_fragment.ProfileActivity"
    android:layout_margin="24dp">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/image_profile_pic"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_name"
        android:layout_toEndOf="@id/image_profile_pic"
        android:text="Name Goes Here"
        android:textSize="16dp"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_ratings"
        android:layout_below="@id/label_name"
        android:layout_alignStart="@id/label_name"
        android:text="Rating: "
        android:textSize="16dp"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_num_ratings"
        android:layout_below="@id/label_ratings"
        android:layout_alignStart="@id/label_name"
        android:text="Num Ratings: "
        android:textSize="16dp"
        android:layout_margin="4dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_fb_message"
        android:text="Open fb messenger"
        android:layout_below="@id/label_num_ratings"
        android:layout_toEndOf="@id/image_profile_pic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_profile_pic"
        android:id="@+id/layout_profile_buttons"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_profile_see_posts"
            android:text="@string/text_post_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_profile_see_reviews"
            android:text="@string/text_review_button"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_posts"
        android:layout_above="@+id/create_post"
        android:layout_below="@id/layout_profile_buttons"
        android:layout_margin="8dp"></ListView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_reviews"
        android:layout_below="@id/layout_profile_buttons"
        android:layout_above="@+id/create_post"
        android:layout_margin="8dp"
        android:visibility="invisible"></ListView>

    <Button
        android:id="@+id/create_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Post"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/list_posts" />

</RelativeLayout>
