...

    <!-- String Resources for Menu -->
    <string name="search_title">Search For Post</string>

    <!-- String resources for the nav menu -->
    <string-array name="navigation_drawer_items_array">
        <item>My Profile</item>
        <item>My Newsfeed</item>
        <item>My Groups</item>
        <item>My Notifications</item>
        <item>My Transactions</item>
        <item>Notification Center</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="frag_names_1">
        <item>Rate and Review</item>
        <item>Enter Location</item>
...
