...
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_notification_center_buttons"
        android:id="@+id/list_notification_center_requests"
        android:layout_margin="8dp">

    </ListView>

    <TextView
        android:layout_width="wrap_content"
...
